Basic searches are working.
